<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/politicianConstraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/politicianListenButton"
        android:onClick="onListenPoliticianClick"
        android:layout_width="280dp"
        android:layout_height="60dp"
        android:layout_marginTop="107dp"
        android:layout_marginBottom="106dp"
        android:text="@string/politicianSoundButtonText"
        app:layout_constraintBottom_toTopOf="@+id/politicianReadButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/politicianCurrencyTextView" />

    <Button
        android:id="@+id/politicianReadButton"
        android:onClick="onReadPoliticianClick"
        android:layout_width="280dp"
        android:layout_height="60dp"
        android:text="@string/politicianReadButtonText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/politicianCurrencyTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:text="@string/politicianText"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>